2020-11-10 (12.20)
	ANDROID: change path label when displaying project folder

2020-11-01 (12.20)
	CONSOLE: give error when file not found

2020-10-31 (12.20)
	SDL: implemented restoring the cursor position

2020-10-29 (12.20)
	COMMON: Implemented c-styles escape sequences

2020-10-27 (12.20)
	COMMON: add support for inline assignment of export variables
	COMMON: add support for unit alias names

2020-10-21 (12.20)
	ANDROID: upgrade to target android 29

2020-10-21 (12.20)
	COMMON: Fix to allow c-modules to be called from units

2020-07-16 (12.19)
	COMMON: Fix 'Print #' on Windows to use Windows line endings

2020-07-12 (12.19)
	ANDROID: fix layout issue with samsung mobiles
	ANDROID: save and restore the selected theme
	ANDROID: fix access to external storage

2020-06-14 (12.19)
	UI: Use theme colours in main display #94
	UI: Added theme menu

2020-06-14 (12.19)
	FLTK: line numbers colours #93
	SDL: restore window size #95

2020-06-06 (12.19)
	COMMON: minor performance tweak

2020-05-11 (12.19)
	ANDROID: complain when samsung keyboard detected
	COMMON: fix compile warnings

2020-05-11 (12.19)
	FLTK: Fix compile warnings with updated gcc

2020-05-10 (12.19)
	COMMON: Fix ABSMIN/ABSMAX transposed #96

2020-05-09 (12.19)
	COMMON: Fix crash when passing non-array to CHART
	SDL: show icon in linux build

2020-05-07 (12.19)
	COMMON: Fix image.save() to array destination

2020-05-04 (12.19)
	COMMON: INPUT crash #99
	COMMON: Fix compile warnings with updated gcc

2020-03-07 (12.19)
	COMMON: implement DEFINEKEY undo #92
	UI: added R157 colour theme #94

2020-02-13 (12.19)
	AUDIO: fix integration with latest version of miniaudio library

2020-02-13 (0.12.18)
	Fix path for HOME constant

2020-02-08 (0.12.18)
	SDL: fix issue #81 - numlock handling
	FLTK: added live editing menu item
	COMMON: increase stack size to 1024

2019-12-21 (0.12.17)
	SDL: fix issue #81 - numlock handling

2019-12-15 (0.12.17)
	FLTK: add online samples command
	FLTK: fix tab resizing
